--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "cra-frontend",
+  "name": "fishhub-cra",
+  "homepage": "https://myusername.github.io/fishub-cra",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,16 +9,36 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "autoprefixer": "^9.7.1",
+    "axios": "^0.19.1",
+    "cssnano": "^4.1.10",
+    "prop-types": "^15.7.2",
+    "tailwindcss": "^1.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "postcss-cli": "^7.1.0",
+    "prettier": "^1.19.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "build:styles": "postcss src/assets/styles/tailwind.css -o src/assets/styles/index.css",
+    "prebuild": "NODE_ENV=production npm run build:styles",
+    "prestart": "npm run build:styles"
   },
   "browserslist": {
     "production": [
