--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@reach/router": "^1.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.7.1",
     "axios": "^0.19.1",
     "cssnano": "^4.1.10",
     "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0",
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
